--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,7 @@
     height: 100vh;
     width: 100vw;
     display: flex;
+    transition: all 0s ease-in-out;
 
 
 
@@ -31,6 +32,8 @@
      align-content: center;
      padding-left:3% ;
      padding-right:3% ;
+     justify-content: space-evenly;
+     align-items: center;
  }
  .logo img{
      height: 2rem;
@@ -84,10 +87,9 @@ a{
     padding-right:2rem ;
     border-radius:2rem ;
     border: 0;
+    cursor: pointer;
     
-
-  
-    
-    
-
+}
+button:hover{
+box-shadow: 0px 0px  15px 5px #6edf52;
 }
