--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,7 @@
      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     height: 100vh;
     width: 100vw;
-    display: flex;
+    /*display: flex;*/
     transition: all 0s ease-in-out;
 
 
@@ -28,7 +28,7 @@
      height: 5rem;
      padding: auto;
      display: flex;
-     justify-content: ;
+     justify-content: space-evenly;
      align-content: center;
      padding-left:3% ;
      padding-right:3% ;
@@ -91,5 +91,35 @@ a{
     
 }
 button:hover{
-box-shadow: 0px 0px  15px 5px #6edf52;
+box-shadow: 0px 0px  15px  #fdb638;
 }
+
+header {
+    background-color: black;
+    height: 100%;
+    width: 100%;
+}
+
+.card  {
+    color: #ffffff;
+    padding-left:3% ;
+    padding-right:3% ;
+    justify-content: space-evenly;
+    padding: auto;
+         
+}  
+.card h3{
+    color: #fdb638;
+}
+.contact{
+
+    background-color: black;
+    border-color:  #fdb638;
+    color: #fdb638;
+    width: auto;
+    height: auto;
+
+
+}
+
+
