--- a/styles/style.css
+++ b/styles/style.css
@@ -106,6 +106,10 @@ header {
     padding-right:3% ;
     justify-content: space-evenly;
     padding: auto;
+    align-items: left;
+    height: 100%;
+    width: auto;
+    display: block;
          
 }  
 .card h3{
@@ -118,6 +122,7 @@ header {
     color: #fdb638;
     width: auto;
     height: auto;
+    border: 2px solid #fdb638;
 
 
 }
