--- a/styles/style.css
+++ b/styles/style.css
@@ -101,8 +101,16 @@ header {
 }
 .navcard{
     background-color: black;
+    padding: auto;
     display: flex;
-     justify-content: space-evenly;
+    justify-content: space-evenly;
+    align-content: center;
+    padding-left:3% ;
+    padding-right:3% ;
+    justify-content: space-evenly;
+    align-items: center;
+    position: relative;
+    
      
     
 
@@ -111,17 +119,8 @@ header {
 .infocard  {
    
     color: #ffffff;
-    padding-left:4% ;
-    padding-bottom: 16%;
-    padding-top: 15%;
-    justify-content: space-evenly;
-    padding: auto;
-    align-items: left;
-    height: 200px;
-    width: 100%;
-    flex-direction: column;
-    background-color:black;
-    font-size: 14px;    
+    
+
          
 } 
 
@@ -130,14 +129,14 @@ header {
     color: #fdb638;
 }
 .contact{
-
+position: relative;
     background-color: black;
     border-color:  #fdb638;
     color: #fdb638;
     width: auto;
     height: auto;
     border: 2px solid #fdb638;
-    margin-left: 10px;
+   
     
 
 }
@@ -146,8 +145,7 @@ header {
     position: relative;
     width: 200px;
     height: 200px;
-    margin-left: 300px;
-    margin-bottom: 455px;
+    
 
 }
 
