--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -32,7 +32,9 @@ html {
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 1000px;
+  
+  max-width: 900px;
+  max-height: 900px;
   position: relative;
   margin: auto;
 }
@@ -41,6 +43,42 @@ html {
 .Containers {
   display: none;
 }
+
+/* Certificate img*/
+.slide img{
+  width:80%;
+  height:80%;
+  display:block;
+  margin-left: auto;
+  margin-right: auto;
+  
+  
+  justify-content: center;
+}
+
+.slide-section {
+  max-width: 68.75rem;
+  margin: auto;
+  text-align: center;
+  justify-content: center;
+  margin-top: 2.5rem;
+  display:block;
+  margin-left: auto;
+  margin-right: auto;
+  
+}
+
+.slide-header {
+  margin-bottom: 1rem;
+}
+
+.skills-wrapper img {
+  padding: 1.25rem;
+}
+
+
+
+
 
 /* forward & Back buttons */
 .Back, .forward {
@@ -216,13 +254,17 @@ nav ul li {
   align-items: center;
   justify-content: center;
   gap: 3.0rem;
-  max-width: 60.75rem;
-  margin: auto;
+  max-width: 80.75rem;
+  margin: 10px;
 }
 
+
+
 .hero img {
-  height: 30.5rem;
-  width: 30.5rem;
+  height: 20.5rem;
+  width: 20.5rem;
+  align-items: right;
+  margin: auto;
 }
 
 
@@ -233,8 +275,9 @@ nav ul li {
 
 .bio {
   width: 30rem;
-  padding: 0.625rem;
-  border-radius: 6px;
+  padding: 0.925rem;
+  
+  border-radius: 7px;
   box-shadow: 0px 2px 15px 2px var(--primary-shadow);
   /*background-color: #fff;*/
 }
@@ -245,7 +288,7 @@ nav ul li {
 
 .bio p {
   line-height: var(--line-height);
-  padding: 0.3rem 0;
+  padding: 0.7rem 0;
 }
 /* Hero section ends */
 
@@ -388,6 +431,8 @@ nav ul li {
   transition: var(--transition);
 }
 
+
+
 .submit-btn:hover {
   background-color: var(--primary-color);
   border: 2px solid var(--primary-color);
@@ -482,19 +527,20 @@ footer {
 
   
   .hero {
-    margin-top: -4rem;
+    margin-top: -7rem;
     flex-direction: column;
     gap: 0;
   }
 
+  
   .hero img {
     height: 37.5rem;
-    width: 30rem;
+    width: 40.5rem;
   }
 
   .bio {
-    margin-top: -7rem;
-    width: 20.5rem;
+    margin-top: -8rem;
+    width: 25.5rem;
   }
 
   .more-about {
@@ -546,3 +592,5 @@ footer {
     max-width: 17.75rem;
   }
 }
+
+/* Poems CSS*/
