--- a/assets/css/poem.css
+++ b/assets/css/poem.css
@@ -200,4 +200,15 @@ p span {
   }
 }
 
+.scroll-up-poem {
+  position: fixed;
+  right: 0.5%;
+  bottom: 3%;
+  cursor: pointer;
+}
+
+.up-arrow {
+  width: 3rem;
+  height: 3rem;
+}
 /*# sourceMappingURL=poem.css.map */
